handle find word event

--- a/popup/index.html
+++ b/popup/index.html
@@ -39,13 +39,7 @@
           <div id="field-content" class="field-content"></div>
         </fieldset>
       </div>
-      <!-- <div class="box">
-          <fieldset class="inner-box">
-            <legend class="field-name">Google Tranlation</legend>
-            <div></div>
-          </fieldset>
-        </div> -->
     </div>
   </body>
-  <script src="main.js"></script>
+  <script type="module" src="main.js"></script>
 </html>
