improve UX: add detail button and click to list suggestion

--- a/popup/index.html
+++ b/popup/index.html
@@ -41,5 +41,6 @@
       </div>
     </div>
   </body>
+  <script src="/helper/jquery-3.5.1.js"></script>
   <script type="module" src="main.js"></script>
 </html>
