add google translate api

--- a/popup/index.html
+++ b/popup/index.html
@@ -32,11 +32,45 @@
           value="Search"
         />
       </div>
-      <div class="box">
+      <div id="oxfordContainer" class="box">
         <fieldset class="inner-box">
           <legend class="field-name">Oxford Dictionaries</legend>
           <span id="go-to-detail" class="dictlick">Detail</span>
-          <div id="field-content" class="field-content"></div>
+          <div id="oxfordBox" class="field-content"></div>
+        </fieldset>
+      </div>
+      <div class="box">
+        <fieldset class="inner-box">
+          <legend class="field-name">Google Translate</legend>
+          <span id="" class="dictlick">Detail</span>
+          <div id="googleBox" class="field-content">
+            <div class="sentences">
+              <div class="trans">Sự khác biệt giữa API google dịch</div>
+            </div>
+            <hr />
+            <div class="dicts">
+              <div class="dict">
+                <div class="pos">động từ</div>
+                <div class="terms">
+                  <span class="term">xem</span>
+                  <span class="term">coi đây</span>
+                  <span class="term">nhìn</span>
+                  <span class="term">nhìn thẳng</span>
+                  <span class="term">thấy</span>
+                </div>
+              </div>
+              <div class="dict">
+                <div class="pos">danh từ</div>
+                <div class="terms">
+                  <span class="term">bề ngoài</span>
+                  <span class="term">dáng điệu</span>
+                  <span class="term">ngó</span>
+                  <span class="term">sự nhìn</span>
+                  <span class="term">vẻ</span>
+                </div>
+              </div>
+            </div>
+          </div>
         </fieldset>
       </div>
     </div>
