--- a/popup/index.html
+++ b/popup/index.html
@@ -44,7 +44,7 @@
           <legend class="field-name">Google Translate</legend>
           <span id="" class="dictlick">Detail</span>
           <div id="googleBox" class="field-content">
-            <div class="sentences">
+            <!-- <div class="sentences">
               <div class="trans">Sự khác biệt giữa API google dịch</div>
             </div>
             <hr />
@@ -69,7 +69,7 @@
                   <span class="term">vẻ</span>
                 </div>
               </div>
-            </div>
+            </div> -->
           </div>
         </fieldset>
       </div>
