update, not done yet

--- a/bubble/assistant.html
+++ b/bubble/assistant.html
@@ -1,5 +1,29 @@
 <div class="bb-wt-root" style="top: 0; left: 0">
-  <div class="bb-wt-bounding">
-    <img class="bb-wt-img" src="" alt="finding" />
-  </div>
+	<div class="bb-wt-bounding">
+		<img class="bb-wt-img" src="" alt="finding" />
+	</div>
+</div>
+
+<div class="bb-res-root" style="top: 0; left: 0">
+	<div class="bb-res-container">
+		<div class="bb-res-card">
+			<div class="bb-res-card-title"></div>
+			<hr class="horizontal-bar" />
+			<div class="bb-res-content">
+				<div class="bb-res-text-bold">Developers</div>
+				<div class="bb-res-pt-2">
+					<div class="bb-res-type">trang tu</div>
+					<ul class="bb-res-list-item">
+						<li class="bb-res-item">riêng</li>
+						<li class="bb-res-item">riêng tư</li>
+						<li class="bb-res-item">hẻo lánh</li>
+						<li class="bb-res-item">kín</li>
+						<li class="bb-res-item">cá nhân</li>
+						<li class="bb-res-item">bis maatj</li>
+						<li class="bb-res-item">vangws ver</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
