manager state better

--- a/bubble/assistant.html
+++ b/bubble/assistant.html
@@ -1,10 +1,12 @@
-<div class="bb-wt-root" style="top: 0; left: 0">
+<!-- waiting bubble -->
+<div tabindex="-1" class="bb-wt-root" style="top: 0; left: 0">
 	<div class="bb-wt-bounding">
 		<img class="bb-wt-img" src="" alt="finding" />
 	</div>
 </div>
 
-<div class="bb-res-root" style="top: 0; left: 0">
+<!-- result bubble -->
+<div tabindex="-1" class="bb-res-root" style="top: 0; left: 0">
 	<div class="bb-res-container">
 		<div class="bb-res-card">
 			<div class="bb-res-card-title"></div>
