--- a/popup/index.html
+++ b/popup/index.html
@@ -1,80 +1,38 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Miss Le Dictionary</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      media="screen"
-      href="/common/css/reset.css"
-    />
-    <link rel="stylesheet" type="text/css" media="screen" href="setting.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
-  </head>
-  <body>
-    <div class="container">
-      <div class="top">
-        <textarea
-          autofocus
-          class="text"
-          id="text"
-          placeholder="Input here"
-        ></textarea>
-      </div>
-      <div class="actions">
-        <input
-          id="btn-submit"
-          class="button-happy"
-          type="submit"
-          value="Search"
-        />
-      </div>
-      <div id="oxfordContainer" class="box">
-        <fieldset class="inner-box">
-          <legend class="field-name">Oxford Dictionaries</legend>
-          <span id="go-to-detail" class="dictlick">Detail</span>
-          <div id="oxfordBox" class="field-content"></div>
-        </fieldset>
-      </div>
-      <div class="box">
-        <fieldset class="inner-box">
-          <legend class="field-name">Google Translate</legend>
-          <span id="" class="dictlick">Detail</span>
-          <div id="googleBox" class="field-content">
-            <!-- <div class="sentences">
-              <div class="trans">Sự khác biệt giữa API google dịch</div>
-            </div>
-            <hr />
-            <div class="dicts">
-              <div class="dict">
-                <div class="pos">động từ</div>
-                <div class="terms">
-                  <span class="term">xem</span>
-                  <span class="term">coi đây</span>
-                  <span class="term">nhìn</span>
-                  <span class="term">nhìn thẳng</span>
-                  <span class="term">thấy</span>
-                </div>
-              </div>
-              <div class="dict">
-                <div class="pos">danh từ</div>
-                <div class="terms">
-                  <span class="term">bề ngoài</span>
-                  <span class="term">dáng điệu</span>
-                  <span class="term">ngó</span>
-                  <span class="term">sự nhìn</span>
-                  <span class="term">vẻ</span>
-                </div>
-              </div>
-            </div> -->
-          </div>
-        </fieldset>
-      </div>
-    </div>
-  </body>
-  <script src="/helper/jquery-3.5.1.js"></script>
-  <script type="module" src="main.js"></script>
+	<head>
+		<meta charset="utf-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<title>Miss Le Dictionary</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="stylesheet" type="text/css" media="screen" href="/common/css/reset.css" />
+		<link rel="stylesheet" type="text/css" media="screen" href="setting.css" />
+		<link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+	</head>
+	<body>
+		<div class="container">
+			<div class="top">
+				<textarea autofocus class="text" id="text" placeholder="Input here"></textarea>
+			</div>
+			<div class="actions">
+				<input id="btn-submit" class="button-happy" type="submit" value="Search" />
+			</div>
+			<div id="oxfordContainer" class="box">
+				<fieldset class="inner-box">
+					<legend class="field-name">Oxford Dictionaries</legend>
+					<span id="go-to-detail" class="dictlick">Detail</span>
+					<div id="oxfordBox" class="field-content"></div>
+				</fieldset>
+			</div>
+			<div class="box">
+				<fieldset class="inner-box">
+					<legend class="field-name">Google Translate</legend>
+					<span id="" class="dictlick">Detail</span>
+					<div id="googleBox" class="field-content"></div>
+				</fieldset>
+			</div>
+		</div>
+	</body>
+	<script src="/helper/jquery-3.5.1.js"></script>
+	<script type="module" src="main.js"></script>
 </html>
