popup, fix error on detail button

--- a/popup/index.html
+++ b/popup/index.html
@@ -20,7 +20,7 @@
 			<div id="oxfordContainer" class="box">
 				<fieldset class="inner-box">
 					<legend class="field-name">Oxford Dictionaries</legend>
-					<span id="go-to-detail" class="dictlick">Detail</span>
+					<a id="go-to-detail" class="dictlick">Detail</a>
 					<div id="oxfordBox" class="field-content"></div>
 				</fieldset>
 			</div>
